--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,16 @@ permalink:        pretty
 relative_permalinks: true
 
 # Setup
-title:            Poole
-tagline:          The Jekyll Butler
-url:              http://getpoole.com
+title:            Awesome Proger
+tagline:          RostakaGmfun's blog
 paginate:         1
 baseurl:          /
 author:
-  name:           Mark Otto
-  url:            https://twitter.com/mdo
-  email:          markdotto@gmail.com
+  name:           Rostyslav Kurylo
+  url:            https://twitter.com/RostakaGmfun
+  email:          rostawesomegd@gmail.com
 
 # Custom vars
 version:          1.0.0
 github:
-  repo:           https://github.com/poole/poole
+  repo:           https://github.com/RostakaGmfun/rostakagmfun.github.io
